# ed25519cpp

./: .gitignore  CMakeLists.txt  README.md  ed25519.podspec  ed25519cpp.pc.in
docs/: Doxyfile.in
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  base58_8cpp.html  classed25519_1_1_base58-members.html  classed25519_1_1_base58.html  classed25519_1_1_data-members.html  classed25519_1_1_data.html  classed25519_1_1_digest-members.html  classed25519_1_1_digest.html  classed25519_1_1_protected_data-members.html  classed25519_1_1_protected_data.html  classed25519_1_1_seed-members.html  classed25519_1_1_seed.html  classed25519_1_1_signature-members.html  classed25519_1_1_signature.html  classed25519_1_1error__category-members.html  classed25519_1_1error__category.html  classed25519_1_1keys_1_1_key-members.html  classed25519_1_1keys_1_1_key.html  classed25519_1_1keys_1_1_pair-members.html  classed25519_1_1keys_1_1_pair.html  classed25519_1_1keys_1_1_private-members.html  classed25519_1_1keys_1_1_private.html  classed25519_1_1keys_1_1_public-members.html  classed25519_1_1keys_1_1_public.html  classed25519_1_1keys_1_1_seed-members.html  classed25519_1_1keys_1_1_seed.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  ed25519_8cpp.html  ed25519_8hpp.html  ed25519_8hpp_source.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_type.html  (+21 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  pages_0.js  (+9 more)
docs/latex/: _r_e_a_d_m_e_8md.tex  annotated.tex  base58_8cpp.tex  classed25519_1_1_base58.eps  classed25519_1_1_base58.tex  classed25519_1_1_data.eps  classed25519_1_1_data.tex  classed25519_1_1_digest.eps  classed25519_1_1_digest.tex  classed25519_1_1_protected_data.eps  classed25519_1_1_protected_data.tex  classed25519_1_1_seed.eps  classed25519_1_1_seed.tex  classed25519_1_1_signature.eps  classed25519_1_1_signature.tex  classed25519_1_1error__category.eps  classed25519_1_1error__category.tex  classed25519_1_1keys_1_1_key.eps  classed25519_1_1keys_1_1_key.tex  classed25519_1_1keys_1_1_pair.tex  classed25519_1_1keys_1_1_private.eps  classed25519_1_1keys_1_1_private.tex  classed25519_1_1keys_1_1_public.eps  classed25519_1_1keys_1_1_public.tex  classed25519_1_1keys_1_1_seed.eps  classed25519_1_1keys_1_1_seed.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  ed25519_8cpp.tex  ed25519_8hpp.tex  files.tex  hierarchy.tex  index.tex  namespaceed25519.tex  namespaceed25519_1_1base58.tex  namespaceed25519_1_1keys.tex  namespaceed25519_1_1size.tex  namespaces.tex  refman.tex  structed25519_1_1_digest.tex  (+2 more)
include/: ed25519.hpp
include/ed25519/c++17/: variant.hpp
lib/: CMakeLists.txt
lib/cmake/: Config.cmake.in  ed25519cpp.cmake  ed25919cpp.cmake
src/: base58.cpp  digest.cpp  ed25519.cpp  utils.cpp
test/: CMakeLists.txt
test/api/: CMakeLists.txt  api_test.cpp
test/digest/: CMakeLists.txt  digest.cpp
test/performance/: CMakeLists.txt  sigantures.cpp
test/performans/: CMakeLists.txt  sigantures.cpp
